--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "client": "npm start --prefix frontend",
     "server": "nodemon backend/server",
     "dev": "concurrently \"npm run client\" \"npm run server\" ",
-    "data:import": "node backend/seederScript.js"
+    "data:import": "node backend/seederScript.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
