--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
