--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
